fixed configuration; fixed resource paths in templates; added blitz template for error; added use declarations to Application\Module; added template suffix to configuration

--- a/module/Application/view/layout/layout.blitz.html
+++ b/module/Application/view/layout/layout.blitz.html
@@ -5,7 +5,7 @@
         <title>ZF2 Rocks</title>
 
         <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" type="text/css" href="/css/bootstrap-responsive.min.css">
         <link rel="stylesheet" type="text/css" href="/css/style.css">
 
     </head>
@@ -18,7 +18,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/"><img src="/img/zf2-logo.png" alt="Zend Framework 2"/>&nbsp;Skeleton Application</a>
+                    <a class="navbar-brand" href="/"><img src="/images/zf2-logo.png" alt="Zend Framework 2"/>&nbsp;Skeleton Application</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
